packages/components/grid/src/grid.scss
/* ... */
:host([scrollable-start]) {
  --_vertical-border-end: linear-gradient(var(--_border-color), var(--_border-color)) 100% 100% / var(--_border-width)
    100% no-repeat;

  table:not(:has(.sticky-start-last))::before {
    background: linear-gradient(to right, rgb(79 79 79 / 10%), transparent);
    content: '';
    inline-size: 1rem;
    inset: 0 auto 0 0;
    position: absolute;
    z-index: 2; // Make sure we are above the <thead> element
  }

  :is(td, th).sticky-start-last {
    overflow: visible clip;

    &::after {
      background: linear-gradient(to right, rgb(79 79 79 / 10%), transparent);
      content: '';
      inline-size: 1rem;
      inset: 0 -1rem 0 auto;
      position: absolute;
      z-index: 1;
    }
  }

  td.sticky-start-last {
    background: var(--_vertical-border-end), var(--_body-cell-background);
  }

  th.sticky-start-last {
    background: var(--_vertical-border), var(--_vertical-border-end), var(--_head-cell-background);

    + th {
      background: var(--_head-cell-background);
    }
  }

  sl-scrollbar::before {
    background: var(--sl-color-border-plain);
    content: '';
    inline-size: var(--sl-size-borderWidth-default);
    inset: 0 auto 0 calc(var(--sl-size-borderWidth-default) * -1);
    position: absolute;
  }
}

:host([scrollable-end]) {
  table:not(:has(.sticky-end-first))::after {
    background: linear-gradient(to right, transparent, rgb(79 79 79 / 10%));
    content: '';
    inline-size: 1rem;
    inset: 0 0 0 auto;
    position: absolute;
    z-index: 1;
  }

  :is(td, th).sticky-end-first {
    --_vertical-border: linear-gradient(var(--_border-color), var(--_border-color)) 0
      calc(100% - var(--_vertical-border-offset)) / var(--_border-width) calc(100% - var(--_vertical-border-offset) * 2)
      no-repeat;
    --_vertical-border-offset: 0px;

    overflow: visible clip;

    &::after {
      background: linear-gradient(to right, transparent, rgb(79 79 79 / 10%));
      content: '';
      inline-size: 1rem;
      inset: 0 0 0 -1rem;
      position: absolute;
      z-index: 1;
    }
  }

  td.sticky-end-first {
    background: var(--_vertical-border), var(--_body-cell-background);
  }

  th.sticky-end-first {
    background: var(--_vertical-border), var(--_head-cell-background);
  }

  sl-scrollbar::after {
    background: var(--sl-color-border-plain);
    content: '';
    inline-size: var(--sl-size-borderWidth-default);
    inset: 0 calc(var(--sl-size-borderWidth-default) * -1) 0 auto;
    position: absolute;
  }
}

:host([striped]) tr[part~='even'] {
  --_body-cell-background: var(--sl-elevation-surface-raised-alternative);
}

table {
  anchor-name: --table;
  border-block-start: 0;
  border-radius: var(--sl-size-borderRadius-default);
  display: flex;
  flex-direction: column;
  inline-size: fit-content;
  min-inline-size: 100%;
  overflow: clip;
  position: relative;
  z-index: 1;
}

caption {
  background: var(--sl-elevation-surface-raised-default);
  block-size: 100%;
  inline-size: 100%;
  position: absolute;
  position-anchor: --thead;
  position-area: center;
  z-index: 1; // Ensure caption is above tbody and below thead (because of DOM order)

  @supports not (position-area: center) {
    display: none;
  }
}

thead,
tbody {
  box-sizing: border-box;
}

thead {
  anchor-name: --thead;
  border: var(--_border);
  border-start-end-radius: var(--sl-size-borderRadius-default);
  border-start-start-radius: var(--sl-size-borderRadius-default);
  inset-block-start: 0;
  max-inline-size: var(--sl-grid-width);
  overflow-x: hidden; // We can't use clip because we scroll programmatically
  position: sticky;
  z-index: 1; // Ensure thead is above tbody and caption (because of DOM order)

  tr + tr {
    th {
      border-block-start: var(--_border);
    }
  }
}

tbody {
  background-color: var(--sl-elevation-surface-raised-default);
  border-block-end: var(--_border);
  border-end-end-radius: var(--sl-size-borderRadius-default);
  border-end-start-radius: var(--sl-size-borderRadius-default);
  border-inline: var(--_border);
  max-inline-size: calc(var(--sl-grid-width) - var(--sl-size-borderWidth-default) * 2);
  min-block-size: var(--sl-grid-tbody-min-height);
  overflow: auto clip;
  overscroll-behavior: contain auto;
  scrollbar-width: none;

  &::-webkit-scrollbar {
    display: none;
  }

  &:has(+ tfoot) {
    border-block-end: 0;
    border-end-end-radius: 0;
    border-end-start-radius: 0;
  }

  &.drop-target {
    position: relative;

    &::before {
      border: var(--_drop-target-outline);
      content: '';
      inset: 0;
      pointer-events: none;
      position: absolute;
      z-index: 1; // Ensure drop target outline is above the rows
    }
  }

  tr:last-of-type td {
    // Hide the bottom border of the last row; tbody already has a bottom border
    border-block-end: none;
  }
}
/* ... */

